--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,16 +1,16 @@
 <form (submit)="submitData($event)">
-  @for (input of state; track $index) { @if (input.type.type == "select") {
-  <label [for]="input.inputName">{{ input.inputName }}</label>
-  <select [id]="input.inputName" [formControl]="input.control">
-    <option *ngFor="let option of input.type.options" [value]="option">
+  @for (input of getInputs(); track $index) { @if (input.inputType.type == "select") {
+  <label [for]="input.name">{{ input.name }}</label>
+  <select [id]="input.name" [formControl]="input.control">
+    <option *ngFor="let option of input.inputType.options" [value]="option">
       {{ option }}
     </option>
   </select>
   } @else {
-  <label [for]="input.inputName">{{ input.inputName }}</label>
+  <label [for]="input.name">{{ input.name }}</label>
   <input
-    [id]="input.inputName"
-    [type]="input.type.type"
+    [id]="input.name"
+    [type]="input.inputType"
     [formControl]="input.control"
   />
   }
